--- a/src/containers/sidebar-navigation/styles.css
+++ b/src/containers/sidebar-navigation/styles.css
@@ -1,4 +1,6 @@
 .sidebar-navigator-container {
+    box-sizing: border-box;
     overflow: auto;
+    padding: 0 8px;
     width: 320px;
 }
